--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
-{
+ {
   "name": "shop-app-fronted",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng serve --port 4300",
+    "build": "ng build --port 4300",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:shopApp-Fronted": "node dist/shop-app-fronted/server/server.mjs"
@@ -21,6 +21,8 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.4",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
